refactor(syncPendingFiles, syncLatestFiles): Replace asyncMapParallel with p-limit and Promise.allSettled
- Use p-limit for concurrency control in syncPendingFiles and syncLatestFiles.
- Employ Promise.allSettled to gather all results and collect errors.
- Enhance individual errors with file ID context.
- Throw AggregateError if any operations fail.
- Import p-limit.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "assert": "^2.1.0",
     "axios": "^1.7.7",
     "expo-file-system": "^17.0.1",
+    "p-limit": "^7.1.1",
     "react": "^19.0.0",
     "react-native": "^0.79.5",
     "zod": "^3.23.8"
